--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,7 @@ body {
     flex-wrap: wrap; /* Cho phép các phần tử con xuống dòng khi không đủ chỗ */
     justify-content: center;
 
+
 }
 /* Sử dụng media query để thay đổi cách hiển thị trên màn hình nhỏ (điện thoại) */
 @media  {
@@ -190,6 +191,7 @@ body {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 150ms;
     width: 100%;
+    margin: 20px;
 }
 
 
@@ -198,6 +200,19 @@ body {
     box-shadow: 0 25px 50px -12px rgba(79, 70, 229, 0.75); /* shadow-2xl */
     --tw-shadow-colored: 0 0 #0000, 0 0 #0000, 0 25px 50px -12px rgba(79, 70, 229, 0.75); /* shadow-indigo-600 */
 }
+.wrapper-product{
+    margin: 2.5rem;
+}
+@media (max-width: 768px) {
+    .wrapper-product{
+        margin-top: 2.5rem;
+    }
 
+}
+
+.flag {
+    width: 30px;
+    height: auto;
+}
 
 
