--- a/src/index.css
+++ b/src/index.css
@@ -193,6 +193,15 @@ body {
     width: 100%;
     margin: 20px;
 }
+@media  {
+    .button-element-product{
+        transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 150ms;
+        width: 100%;
+    }
+
+}
 
 
 .button-element-product:hover {
