--- a/src/index.css
+++ b/src/index.css
@@ -228,4 +228,23 @@ body {
     height: auto;
 }
 
+.aboutmeitem{
+    flex-direction: column;
+    align-items: center;
+    width: 12rem;
+    margin: 1.25rem
+
+}
+
+@media (max-width:768px) {
+    .aboutmeitem{
+        flex-direction: column;
+        align-items: center;
+        width: 12rem;
+        margin-top: 8rem;
+
+    }
+
+}
+
 
